...

class HomeView extends GetView<TablesController> {
  const HomeView({Key? key}) : super(key: key);
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('Screen_with_tables'),
      appBar: AppBar(
        backgroundColor: Colors.white,
        title: const Text(
          'Tables',
          style: TextStyle(color: Colors.black),
        ),
...
                  child: TextButton.icon(
                      onPressed: controller.feachtData,
                      icon: const Icon(Icons.update),
                      label: const Text('Try again')),
                )
              : GridView.builder(
                  key:const Key('List_of_tables_is_visible'),
                  padding: const EdgeInsets.symmetric(vertical: 8),
                  itemCount: controller.listTables.length,
                  itemBuilder: (_, index) {
                    Tables tables = controller.listTables[index];
                    Customers? customers = controller.hasCustomers(tables.id);
                    return TableAdapter(
...
